# kelsa

./: .cursorrules  .gitignore  Makefile  README.md  TODO.md  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt
common/: auth.py  config.py  logger.py
desktop-app/: main.py  requirements.txt  ui.py  work_grouper.py  work_repo.py
desktop-app/pages/: app.py  app_level_metrics_page.py
desktop-client/: application_details_fetcher.py  main.py  produce_to_kafka.py  work_recorder.py
desktop-recorder/: application_details_fetcher.py  com.prithvianilk.kelsa.desktop_recorder_startup.plist  desktop-recorder.sh  file_locker.py  logger.py  main.py  requirements.txt  work_recorder.py
frontend/: .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: mainPageClient.ts  workServiceClient.ts
frontend/src/components/ui/: chart.tsx
pinot/: Dockerfile  docker-compose.prod.yaml  docker-compose.yaml
pinot/nginx/: nginx.conf  nginx.local.conf
pinot/query/: queries.sql
pinot/rawData/: work.json
pinot/schemas/: work.json
pinot/tables/: work.json
web-app/: .dockerignore  Dockerfile  README_Docker.md  api.py  main.py  pinot_conn.py  requirements.txt  test_work_grouper.py  time_util.py  ui.py  ui_test.py  work.py  work_grouper.py  work_repo.py
web-app/.streamlit/: config.toml
web-app/curls/: by-app.md  main-page.md
web-app/dtos/: by_app.py  main_page.py
web-app/flink/: data_stream_factory.py
web-app/middlewares/: cors.py
web-app/pages/: by_app.py  page_state.py
web-app/services/: by_app_service.py  main_page_service.py  open_ai.py  user_service.py  work_ingestion_service.py  work_summarisation_service.py
web-app/services/work_grouper/: tab_cleaner.py  test_work_grouper.py  work_grouper.py
web-app/services/worker/: report_generation_worker.py
